# Racerbot-Car-2-Workspace

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md
docs/: adding-your-own-code.md  architecture.md  concepts.md  f1tenth-sim-results.json  git-setup.md  hardware-reference.md  operations.md  racing-autonomy.md  realsense-camera.md  simulator.md  troubleshooting.md  usb-camera-livestream.md  web-dashboard.md  writing-your-own-node.md
src/f1tenth_system/: .gitmodules  README.md
src/f1tenth_system/f1tenth_stack/: package.xml  setup.py
src/f1tenth_system/f1tenth_stack/launch/: bringup_launch.py  sick_bringup_launch.py  sick_tim_5xx.launch  teleop_launch.py
src/gap_follow/: README.md  package.xml  setup.py
src/gap_follow/config/: gap_follow.yaml
src/gap_follow/gap_follow/: gap_follow_node.py  gap_logic.py
src/gap_follow/launch/: gap_follow_launch.py
src/gap_follow/test/: test_gap_logic.py
src/pure_pursuit/: README.md  package.xml  setup.py
src/pure_pursuit/config/: auto_map_race.yaml  pure_pursuit.yaml  waypoint_recorder.yaml
src/pure_pursuit/launch/: pure_pursuit_launch.py  waypoint_recorder_launch.py
src/pure_pursuit/pure_pursuit/: auto_map_race_node.py  generate_velocity_profile.py  map_subtraction.py  pure_pursuit_node.py  racing_math.py  waypoint_recorder_node.py
src/pure_pursuit/test/: test_auto_map_race.py  test_opponent_integration.py  test_racing_math.py
src/pure_pursuit/waypoints/: example_stadium_raw.csv
src/racerbot_launch/: CMakeLists.txt  package.xml
src/racerbot_launch/launch/: auto_map_race_launch.py  autonomous_mapping_launch.py  dashboard_test_launch.py  race_launch.py  realsense_camera_launch.py  slam_launch.py
src/usb_cam_stream/: README.md  package.xml  setup.cfg  setup.py
src/usb_cam_stream/config/: realsense_stream.yaml  usb_cam_stream.yaml
src/usb_cam_stream/launch/: realsense_stream_launch.py  usb_cam_stream_launch.py
src/usb_cam_stream/usb_cam_stream/: camera_stream_node.py
src/usb_cam_stream/web/: index.html
src/web_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/web_dashboard/config/: web_dashboard.yaml
src/web_dashboard/launch/: web_dashboard_launch.py
src/web_dashboard/test/: test_protocol.py
src/web_dashboard/web/: dashboard.js  index.html  style.css
src/web_dashboard/web_dashboard/: dashboard_node.py  protocol.py
tools/f1tenth_sim/: requirements.txt  run_validation.py  setup.sh
