<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_cam_stream</name>
  <version>0.1.0</version>
  <description>Live MJPEG video stream from a USB webcam, served over plain HTTP so it can be viewed in any browser -- no ROS install, no plugins, no login needed on the viewing device. See docs/usb-camera-livestream.md.</description>
  <maintainer email="bryanmaubc@gmail.com">racerbotcar-2</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>python3-tornado</depend>
  <depend>python3-opencv</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
